--- a/elk.html
+++ b/elk.html
@@ -66,7 +66,7 @@
             <h2 class="text-3xl font-bold text-center mb-12">什么是ELK Stack?</h2>
             <div class="flex flex-col md:flex-row items-center">
                 <div class="md:w-1/2 mb-8 md:mb-0 md:pr-8">
-                    <img src="https://picsum.photos/600/400?random=1" alt="ELK Stack架构图" class="rounded-lg shadow-xl">
+                    <img src="images\elk.jpg" alt="ELK Stack架构图" class="rounded-lg shadow-xl">
                 </div>
                 <div class="md:w-1/2">
                     <p class="text-lg mb-4">
