--- a/k8s.html
+++ b/k8s.html
@@ -122,7 +122,7 @@
             <h2 class="text-3xl font-bold mb-8 text-center">Kubernetes架构原理</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
                 <div>
-                    <img src="https://picsum.photos/600/400?random=k8s-architecture" alt="Kubernetes架构图" class="w-full rounded-lg shadow-md">
+                    <img src="images\k8s.jpg" alt="Kubernetes架构图" class="w-full rounded-lg shadow-md">
                 </div>
                 <div class="space-y-8">
                     <div class="architecture-step">
