--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="md:w-2/3 p-8">
                         <h2 class="text-3xl font-bold mb-4">高级运维工程师</span></h2>
-                        <p class="text-gray-700 mb-6">10年Linux运维经验，专注云原生和自动化运维</p>
+                        <p class="text-gray-700 mb-6">10年以上Linux运维经验，专注云原生和自动化运维</p>
                         
                         <div class="flex flex-wrap gap-4 mb-6">
                             <span class="bg-purple-100 text-purple-800 px-4 py-1 rounded-full">运维开发</span>
