--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                         <div>
                             <h3 class="font-bold">潘运维</h3>
                             <p class="text-gray-600 text-sm">高级运维工程师 | DevOps实践者</p>
-                            <p class="text-gray-700 text-sm mt-1">10年Linux运维经验，专注云原生和自动化运维</p>
+                            <p class="text-gray-700 text-sm mt-1">10年以上Linux运维经验，专注云原生和自动化运维</p>
                         </div>
                     </div>
                     <div class="flex space-x-4 justify-center">
